--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -3,7 +3,7 @@
 
   <%# Summary %>
   <div id="exp-summary" class="border border-gray-300 rounded-md mb-5 bg-[#DDF8F0] p-2">
-    <h3 class="mb-3 text-md font-bold">Trip Summary:</h3>
+    <h3 class="mb-3 text-md font-bold">Overview:</h3>
     <div class="flex justify-between">
       <div>
         <p class="text-center"><%=@summary[0]%> €</p>
@@ -24,6 +24,68 @@
   <div id="exp-filter" class="flex justify-around mb-5">
     <div class="border border-gray-300 rounded-md p-2">Trips</div>
     <div class="border border-gray-300 rounded-md p-2">Category</div>
+  </div>
+
+
+
+
+
+  <%# Spending Pie Chart %>
+  <div class="border border-gray-300 rounded-md mb-5 p-2">
+
+    <h3 class="p-5 mb-5 text-xl font-bold">Spending</h3>
+
+    <%= pie_chart @expenses_by_category,
+      donut: true,
+      library: {
+        cutout: "70%",
+        plugins: {
+          legend: {
+            position: "bottom",
+            labels: {
+              usePointStyle: true
+            }
+          }
+        }
+      },
+      colors: [
+          "#4E79A7", "#F28E2B", "#E15759", "#76B7B2", "#59A14F",
+          "#EDC948", "#B07AA1", "#FF9DA7", "#9C755F", "#BAB0AC",
+          "#8CD17D", "#FFBE7D", "#AEDFF7", "#D0666C"
+        ]
+    %>
+
+  </div>
+
+
+  <%# Categories Column Chart %>
+  <div class=" border border-gray-300 rounded-md mb-5 p-2">
+
+    <h3 class="p-5 mb-5 text-xl font-bold">Popular Categories</h3>
+
+    <%= column_chart @amount_by_category,
+      colors: [
+        "#4E79A7", "#F28E2B", "#E15759", "#76B7B2", "#59A14F",
+        "#EDC948", "#B07AA1", "#FF9DA7", "#9C755F", "#BAB0AC",
+        "#8CD17D", "#FFBE7D", "#AEDFF7", "#D0666C"
+      ]
+    %>
+
+  </div>
+
+  <%# heatmap Chart %>
+  <div class=" border border-gray-300 rounded-md mb-5 p-2">
+
+    <h3 class="p-5 mb-5 text-xl font-bold">Per Trip</h3>
+
+    <%= column_chart @spending_per_country,
+      colors: [
+        "#4E79A7", "#F28E2B", "#E15759", "#76B7B2", "#59A14F",
+        "#EDC948", "#B07AA1", "#FF9DA7", "#9C755F", "#BAB0AC",
+        "#8CD17D", "#FFBE7D", "#AEDFF7", "#D0666C"
+      ]
+    %>
+
   </div>
 
   <%# Sub-Title %>
@@ -52,22 +114,4 @@
     </ul>
   </div>
 
-  <%# Sub-Title %>
-  <h3 class="mb-5 text-xl font-bold">Spending Breakdown</h3>
-
-  <%# Pie Chart %>
-  <div id="exp-piechart" class="p-20 border border-gray-300 rounded-md mb-5">Pie chart here</div>
-
-  <%# Sub-Title %>
-  <h3 class="mb-5 text-xl font-bold">Spending overtime</h3>
-
-  <%# Graph Chart %>
-  <div id="exp-graph" class="p-20 border border-gray-300 rounded-md"> graph here</div>
-
 </div>
-
-
-<%# TO DO %>
-<%# add currency sign to expense table or link it to base_currency %>
-<%# add date to expense table %>
-<%# add logo to category %>
