--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -1,8 +1,5 @@
+<% @page_title = "Review your expense" %>
 <div class="bg-[#F2FFFB] rounded-t-2xl p-6 flex-grow">
-
-  <h1 class="font-bold text-2xl text-[#06231B] mb-6">
-    Review your expense
-  </h1>
 
   <div class="bg-white rounded-2xl shadow-md p-6 space-y-5">
 
