--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,9 +1,6 @@
+<% @page_title = "My trips" %>
 <%# Container %>
 <div class="bg-[#F2FFFB] rounded-t-2xl p-6 flex-grow">
-
-  <div class="text-left">
-    <h2 class="font-bold mb-5 text-3xl">Trips</h2>
-  </div>
 
   <div id="cards" class="grid grid-cols-1 justify-items-center">
   <%if @trips.any?%>
@@ -34,8 +31,6 @@
       <div class="flex justify-center p-5 border border-dashed rounded-xl">
         <i data-lucide="plus" class="w-10 h-10 border rounded-full text-white bg-[#21A179]"></i>
       </div>
-      <p>- Create a trip</p>
-      <p>- Track your expenses!</p>
     <%end%>
   <%end%>
   </div>
