--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -101,7 +101,7 @@
   </div>
 
   <%# Spending by day %>
-  <div class="p-5 border rounded-md mb-5">
+  <div class="border border-gray-300 rounded-md mb-5 p-2">
     <h3 class="text-xl font-bold mb-3">Spending Over Time</h3>
 
     <%= column_chart @spending_over_time,
