--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -50,13 +50,13 @@
         <%= f.label :budget, "Budget", class: "block text-sm font-medium text-[#06231B] mt-4" %>
         <%= f.number_field :budget,
               step: "0.01",
-              class: "w-full mt-1 px-4 py-3 bg-[#F7FAF9] border border-[#E6ECEA] rounded-xl 
+              class: "w-full mt-1 px-4 py-3 bg-[#F7FAF9] border border-[#E6ECEA] rounded-xl
                      focus:ring-[#21A179] focus:border-[#21A179] text-[#06231B] shadow-sm" %>
       </div>
 
       <%# BUDGET CURRENCY (visible but uneditable) %>
       <div>
-        <%= label_tag :budget_currency, "Budget Currency", 
+        <%= label_tag :budget_currency, "Budget Currency",
               class: "block text-sm font-medium text-[#06231B] mt-4" %>
 
         <div class="w-full mt-1 px-4 py-3 bg-[#F7FAF9] border border-[#E6ECEA] rounded-xl text-[#06231B] shadow-sm opacity-70">
@@ -72,23 +72,21 @@
       <div>
         <%= f.label :start_date, "Start Date", class: "block text-sm font-medium text-[#06231B] mt-4" %>
         <%= f.date_field :start_date,
-              class: "w-full mt-1 px-4 py-3 bg-[#F7FAF9] border border-[#E6ECEA] rounded-xl 
+              class: "w-full mt-1 px-4 py-3 bg-[#F7FAF9] border border-[#E6ECEA] rounded-xl
                      focus:ring-[#21A179] focus:border-[#21A179] text-[#06231B] shadow-sm" %>
       </div>
 
       <%# END DATE %>
       <div>
         <%= f.label :end_date, "End Date", class: "block text-sm font-medium text-[#06231B] mt-4" %>
-        <%= f.date_field :end_date,
-              class: "w-full mt-1 px-4 py-3 bg-[#F7FAF9] border border-[#E6ECEA] rounded-xl 
-                     focus:ring-[#21A179] focus:border-[#21A179] text-[#06231B] shadow-sm" %>
+        <%= f.date_field :end_date, class: "w-full mt-1 px-4 py-3 bg-[#F7FAF9] border border-[#E6ECEA] rounded-xl focus:ring-[#21A179] focus:border-[#21A179] text-[#06231B] shadow-sm" %>
       </div>
 
       <%# SUBMIT BUTTON %>
       <div class="pt-4">
-        <%= f.submit "Create Trip",
-              class: "w-full bg-[#21A179] text-white py-3 rounded-full font-semibold text-base 
-                     hover:bg-[#1b8a67] transition" %>
+        <%= f.submit "Create Trip", data: {action: "click->alert#initSweetalert"},
+          class: "w-full bg-[#21A179] text-white py-3 rounded-full font-semibold text-base hover:bg-[#1b8a67] transition" %>
+
       </div>
 
     <% end %>
