--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="flex-1">
 
   <%# Hero start %>
-  <div class="min-h-screen bg-white flex flex-col justify-center items-center px-6 text-center">
+  <div class="min-h-[calc(100vh-72px)] relative bg-white flex flex-col justify-center items-center px-6 text-center">
 
     <!-- Illustration -->
     <%= image_tag "undraw_explore_kfv3.svg",
@@ -19,7 +19,7 @@
 
     <%= link_to "Start recording!", trips_path, class: "btn bg-[#21A179] text-white rounded-full px-8" %>
 
-    <div class="absolute bottom-6 left-1/2 transform -translate-x-1/2 animate-bounce">
+    <div class="absolute bottom-10 left-1/2 transform -translate-x-1/2 animate-bounce">
       <svg xmlns="http://www.w3.org/2000/svg" 
           class="h-6 w-6 text-[#06231B]" 
           fill="none" 
