--- a/app/views/shared/_navbar_logged.html.erb
+++ b/app/views/shared/_navbar_logged.html.erb
@@ -21,14 +21,14 @@
 
   <%# Voice Record %>
   <% if current_user.trips.any? %>
-    <%= link_to new_trip_expense_path(current_user.trips.last), class: "flex flex-col items-center btn btn-circle bg-[#21A179] text-white h-auto w-16 py-2" do %>
+    <%= link_to new_trip_expense_path(current_user.trips.last), class: "flex flex-col items-center btn btn-ghost btn-circle h-auto w-16" do %>
       <i data-lucide="mic"></i>
-      <span class="text-[10px] mt-1 text-white/90">Record</span>
+      <span class="text-[10px] mt-1 text-[#06231B]/80">Record</span>
     <% end %>
   <% else %>
-    <%= link_to new_trip_path, class: "flex flex-col items-center btn btn-circle bg-[#21A179] text-white h-auto w-16 py-2" do %>
+    <%= link_to new_trip_path, class: "flex flex-col items-center btn btn-ghost btn-circle h-auto w-16" do %>
       <i data-lucide="mic"></i>
-      <span class="text-[10px] mt-1 text-white/90">Record</span>
+      <span class="text-[10px] mt-1 text-[#06231B]/80">Record</span>
     <% end %>
   <% end %>
 
