--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,10 +1,16 @@
 <%# Chatbox Form  %>
-<%= form_with model: [chat, message], method: :post, html: { class: "flex flex-col" } do |f| %>
+<%= form_with model: [chat, message], method: :post, 
+  html: { class: "flex items-center gap-3 w-full" } do |f| %>
 
-  <%= f.text_area :content, class: "border-none outline-none resize-none", placeholder: "Ask anything..", required: true %>
+  <%= f.text_area :content,
+    rows: 2,
+    placeholder: "Ask anything...", 
+    required: true,
+    class: "flex-1 resize-none px-4 py-3 bg-white border border-[#E6ECEA] rounded-xl 
+              focus:outline-none focus:ring-2 focus:ring-[#21A179] text-[#06231B] shadow-sm" %> 
 
-  <div class="flex justify-end mt-2">
-    <%= f.submit "Send", class: "float-right border px-4 py-2 bg-white hover:bg-gray-100 rounded-xl" %>
-  </div>
+  <%= f.submit "Send", 
+    class: "bg-[#21A179] text-white px-5 py-3 rounded-full font-semibold 
+                hover:bg-[#1b8a67] transition active:scale-95" %>
 
 <%end%>
