--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,15 +1,13 @@
 <% if message.role == "user" %>
-  <div class="d-flex justify-content-end mb-2">
-    <div>
-      <div class="bg-white px-3 pb-1 pt-3 rounded-pill">
-        <%= raw(render_markdown(message.content)) %>
-      </div>
+  <div class="flex justify-end">
+    <div class="max-w-[75%] bg-[#AEEAD1] px-4 py-2 rounded-xl shadow">
+      <%= raw(render_markdown(message.content)) %>
     </div>
-  </div>
+</div>
 
 <% elsif message.role == "assistant" %>
-  <div class="d-flex justify-content-start mb-5" id="<%= dom_id(message) %>">
-    <div class="px-3 pb-0 pt-3">
+  <div class="flex justify-start" id="<%= dom_id(message) %>">
+    <div class="max-w-[75%] bg-white text-[#06231B] px-4 py-2 rounded-xl border border-[#E6ECEA] shadow-sm">
       <%= message.content.present? ? raw(render_markdown(message.content)) : "..." %>
     </div>
   </div>
