--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -32,7 +32,7 @@
       <% end %>
 
       <p class="text-sm text-[#06231B]/60 mt-1">
-        Budget: <span class="font-semibold text-[#06231B]"><%= @summary[1].format(no_cents: true)%> $</span>
+        Budget: <span class="font-semibold text-[#06231B]"><%= @summary[1].format(no_cents: true)%></span>
       </p>
 
       <p class="text-sm text-[#06231B]/60 mt-1">
